--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,9 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
-    "nodemon": "^3.1.0"
+    "express-handlebars": "^7.1.2",
+    "nodemon": "^3.1.0",
+    "path": "^0.12.7",
+    "url": "^0.11.3"
   }
 }
