--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
+    "fetch": "^1.1.0",
+    "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
+    "require": "^2.4.20",
     "url": "^0.11.3"
   }
 }
