--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
+    "express-jwt": "^8.4.1",
     "handlebars": "^4.7.8",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "open": "^10.1.0",
+    "passport": "^0.7.0",
     "path": "^0.12.7",
     "url": "^0.11.3"
   },
