--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "handlebars": "^4.7.8",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
+    "multer": "^1.4.5-lts.1",
     "open": "^10.1.0",
     "passport": "^0.7.0",
     "path": "^0.12.7",
