--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
   "name": "apdev-mco",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "start": "node server.js",
+    "devStart": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
-    "ejs": "^3.1.9",
-    "express": "^4.18.3",
-    "nodemon": "^3.1.0"
-  }
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
+    "express-jwt": "^8.4.1",
+    "handlebars": "^4.7.8",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.4",
+    "multer": "^1.4.5-lts.1",
+    "open": "^10.1.0",
+    "passport": "^0.7.0",
+    "path": "^0.12.7",
+    "url": "^0.11.3"
+  },
+  "keywords": [],
+  "description": ""
 }
