--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-jwt": "^8.4.1",
+    "express-session": "^1.18.0",
     "handlebars": "^4.7.8",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
