--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/
+MONGODB_URI=mongodb+srv://roi:a@apdev.g7ddijr.mongodb.net/?retryWrites=true&w=majority&appName=APDEV
 DB_NAME=restaurantDB
 PORT=3000
